# invaders

./: Cargo.toml  README.md
scripts/: build-all.ps1
src/: fps_counter.rs  main.rs  main_menu.rs  state_plugin.rs
src/invaders/: aliens.rs  bat.rs  bullet.rs  hud.rs  menu.rs  mod.rs
wasm/: index.html  invaders.js
