[package]
name = "invaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
version = "*"

[target.'cfg(not(target_family="wasm"))'.dependency.bevy]
version = "*"
features = ["dynamic_linking"]


#[dependencies]
#bevy = { version = "*", features = ["dynamic_linking"] }
[dependencies]
rand = "*"